--- a/kakao-join/src/main/resources/templates/index.html
+++ b/kakao-join/src/main/resources/templates/index.html
@@ -27,8 +27,17 @@
             <div class="card">
                 <div class="inner p-4">
                     <div class="d-flex flex-column align-items-center">
+                        <div class="item my-2">
+                            <img th:src="${user.profile}" alt="프로필" class="rounded-circle">
+                        </div>
+                        <div class="item my-2">
+                            <h3 th:text="${user.name}"></h3>
+                        </div>
+                        <div class="item my-2">
+                            <h5 th:text="${user.email}"></h5>
+                        </div>
                         <div class="item my-2 w-100">
-                            <span sec:authentication="principal">아이디</span>
+                            <span sec:authentication="principal">인증된 사용자</span>
                         </div>
                     </div>
                 </div>
