--- a/form/src/main/resources/templates/index.html
+++ b/form/src/main/resources/templates/index.html
@@ -29,13 +29,10 @@
                 <div class="inner p-4">
                     <div class="d-flex flex-column align-items-center">
                         <div class="item my-2">
-                            <img th:src="${user.profile}" alt="프로필" class="rounded-circle">
+                            <h3>ID : <strong sec:authentication="principal.username">아이디</strong></h3> 
                         </div>
                         <div class="item my-2">
-                            <h3 th:text="${user.name}"></h3>
-                        </div>
-                        <div class="item my-2">
-                            <h5 th:text="${user.email}"></h5>
+                            <h3>권한 : <strong sec:authentication="principal.authorities">권한</strong></h3> 
                         </div>
                         <div class="item my-2 w-100">
                             <span sec:authentication="principal">인증된 사용자</span>
