--- a/form-custom/src/main/resources/templates/login.html
+++ b/form-custom/src/main/resources/templates/login.html
@@ -24,13 +24,13 @@
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
                 
                 <div class="form-floating">
-                    <input type="text" class="form-control" id="floatingInput" name="username" value="" placeholder="아이디"
+                    <input type="text" class="form-control" id="username" name="username" value="" placeholder="아이디"
                            autofocus th:value="${username}">
-                    <label for="floatingInput">아이디</label>
+                    <label for="username">아이디</label>
                 </div>
                 <div class="form-floating">
-                    <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="비밀번호">
-                    <label for="floatingPassword">비밀번호</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호">
+                    <label for="password">비밀번호</label>
                 </div>
     
                 <div class="form-check text-start my-3 d-flex justify-content-around">
